Start structure and components of the atomic desing and other config dev

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,14 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@src/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@styles/*": ["src/styles/*"],
+      "@assets/*": ["src/assets/*"],
+      "@services/*": ["src/services/*"],
+      "@screens/*": ["src/screens/*"]
+    }
+  },
   "extends": "expo/tsconfig.base"
 }
