--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@expo-google-fonts/roboto-condensed": "^0.2.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "axios": "^0.27.2",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "js-md5": "^0.7.3",
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -32,7 +34,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@testing-library/react-native": "^9.1.0",
-    "@types/react": "^18.0.5",
+    "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-plugin-module-resolver": "^4.1.0",
